# music_surfer

./: CMakeLists.txt  CMakePresets.json  IMPLEMENTATION_PLAN.md  README.md
cmake/: ProjectOptions.cmake
src/: CMakeLists.txt  main.cpp
src/audio/: AudioEngine.cpp
src/core/: Album.hpp  Artist.hpp  Identifiers.hpp  Playlist.hpp  Track.cpp  Track.hpp
src/database/: Database.cpp  Database.hpp
src/services/: Abstractions.hpp  AudioPlayer.cpp  AudioPlayer.hpp  LibraryManager.cpp  LibraryManager.hpp  PlaylistManager.cpp  PlaylistManager.hpp  PlaylistManagerImpl.cpp  PlaylistManagerImpl.hpp
src/ui/: JuceMainComponent.cpp  JuceMainComponent.hpp  JuceMainWindow.cpp  JuceMainWindow.hpp  MainWindow.cpp  MainWindow.hpp
src/utils/: FileSystemScanner.cpp  FileSystemScanner.hpp  Logger.cpp  MetadataParser.cpp  MetadataParser.hpp
tests/: CMakeLists.txt  test_database.cpp  test_milestones.cpp  test_smoke.cpp
